examples/test/testpolicy14703.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14703
  namespace: namespace20
spec:
  podSelector:
    matchLabels:
      key13: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value27
      podSelector:
        matchLabels:
          key14: value5
          key22: value31
          key46: value27
